# anthive

./: .env.example  .gitignore  CLAUDE.md  EXTRACTION_AUDIT.md  LICENSE  Makefile  README.md  SETUP.md  pyproject.toml  swarm.toml
.claude/agents/code-quality/: code-cleaner.md  code-reviewer.md
.claude/agents/dev/: codebase-explorer.md  meeting-analyst.md
.claude/agents/python/: python-developer.md
.claude/agents/test/: test-generator.md
.claude/agents/workflow/: brainstorm-agent.md  design-agent.md
.claude/commands/core/: readme-maker.md  status.md  sync-context.md
.claude/commands/knowledge/: create-kb.md
.claude/commands/review/: review.md
.claude/commands/visual-explainer/: diff-review.md  fact-check.md  generate-visual-plan.md  plan-review.md  project-recap.md  share.md
.claude/commands/workflow/: brainstorm.md  create-pr.md  define.md  ship.md
.claude/kb/: README.md  _index.yaml
.claude/kb/genai/concepts/: guardrails.md  multi-agent-systems.md  rag-architecture.md  state-machines.md  tool-calling.md
.claude/kb/prompt-engineering/concepts/: output-formatting.md  structured-extraction.md  system-prompts.md
.claude/kb/python/: index.md
.claude/kb/python/concepts/: context-managers.md
.github/workflows/: test.yml
anthive/: __init__.py  cli.py  composer.py  config.py  heartbeat.py  langfuse_client.py  merger.py  monitor.py  observability.py  scanner.py  schemas.py
anthive/dispatchers/: __init__.py  base.py  local.py
anthive/tests/: conftest.py  test_composer.py  test_dispatcher_local.py  test_heartbeat.py  test_merger.py  test_monitor.py  test_scanner.py  test_schemas.py  test_smoke.py
anthive/tests/e2e/: test_e2e_pipeline.py
docker/: langfuse-compose.yml
examples/reference-logs/: ORCHESTRATION.md  PROMPTS.md  README.md  merge-queue.md  session_log_template.md
logs/: merge-queue.md
scripts/: session_finish.sh  session_heartbeat.sh  session_init.sh
tasks/: PLAN.md  README.md  T-20260504-langfuse-verify.md  T-20260504-otel-verify.md  p0.md  p1.md  p2.md  p3.md  p4.md  p5.md  p6.md  p7.md
tasks/agentswarm/contracts/: README.md  merge_queue.example.md  ready_list.example.json  session_log.example.md  task.example.md
