[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anthive"
version = "0.0.1"
description = "A structured swarm for Claude Code — parallel autonomous sessions with end-to-end observability."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Luan Moreno Medeiros Maciel", email = "luan.moreno@owshq.com" }
]
keywords = ["claude", "claude-code", "agents", "orchestration", "llm", "swarm", "langfuse", "observability"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "questionary>=2.0.1",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "watchdog>=4.0.0",
    "httpx>=0.27.0",
    "tomli>=2.0.1; python_version<'3.11'",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
]

[project.optional-dependencies]
cloud = [
    "anthropic>=0.40.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
]

[project.scripts]
anthive = "anthive.cli:app"

[project.urls]
Homepage = "https://github.com/luanmoreno/anthive"
Documentation = "https://github.com/luanmoreno/anthive/blob/main/README.md"
Issues = "https://github.com/luanmoreno/anthive/issues"

[tool.hatch.build.targets.wheel]
packages = ["anthive"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "RUF"]
ignore = ["E501"]  # line length handled by black

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["anthive/tests"]
python_files = "test_*.py"
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
